# memaix

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  HANDOFF.md  LICENSE  Makefile  NOTICE  README.md  docker-compose.yml  install.sh  setup.ps1  setup.sh
caddy/: Caddyfile
cloudflared/: config.example.yml
config/: acl.example.yaml  brand.example.yaml  memaix.example.yaml
docs/: ACCESS-MODES.md  ADDON-PM-BUILD.md  ADDON-PROJECT-MANAGEMENT.md  AI-CLIENTS.md  ARCHITECTURE.md  AUTO-INSTALLER.md  BACKENDS.md  BACKUP.md  BUILD.md  CHOOSE-YOUR-LLM.md  CODE-WORKFLOW.md  DEVELOPMENT-PROPOSALS.md  DOCTOR.md  ENTERPRISE.md  EXPOSE.md  FEATURE-AGENT-TEAM.md  FEATURE-APPROVAL-OUTBOX.md  FEATURE-AUTOMATION-RULES.md  FEATURE-CONNECTOR-FRAMEWORK.md  FEATURE-DISCOVERABILITY.md  FEATURE-LLM-ENGINE.md  FEATURE-NEXTCLOUD-BACKEND.md  FEATURE-PM-ENGINE.md  FEATURE-PROACTIVE-BRIEF.md  FEATURE-SEMANTIC-SEARCH.md  IMPORT.md  (+44 more)
gateway/: Dockerfile  README.md  pyproject.toml
gateway/config-example/: acl.yaml  memaix.yaml
gateway/scripts/: gemma_agent.py
gateway/src/memaix_gateway/: __init__.py  __main__.py  acl.py  backlog_schema.py  cli.py  config.py  doctor.py  frontmatter.py  paths.py  server.py
gateway/src/memaix_gateway/auth/: token.py
gateway/src/memaix_gateway/backends/: memory_store.py  token_store.py
gateway/src/memaix_gateway/board/: board.html  routes.py  store.py
gateway/src/memaix_gateway/capabilities/: catalog.py  nudges.py  registry.py
gateway/src/memaix_gateway/connectors/: base.py  catalog.py  registry.py
gateway/src/memaix_gateway/connectors/adapters/: contacts_carddav.py  deck_nextcloud.py  files_webdav.py  mail_microsoft.py  notes_nextcloud.py  tasks_caldav.py
gateway/src/memaix_gateway/i18n/: __init__.py
gateway/src/memaix_gateway/i18n/locales/: de.json  en.json  es.json  fr.json  sv.json
gateway/src/memaix_gateway/llm/: __init__.py  agent.py  client.py  identity.py  toolbridge.py
gateway/src/memaix_gateway/nextcloud/: docgen.py  notes_store.py  sync.py
gateway/src/memaix_gateway/notify/: brief.py  channels.py  deliver.py  scheduler.py  store.py
gateway/src/memaix_gateway/outbox/: execute.py  policy.py  preview.py  queue.py
gateway/src/memaix_gateway/pm/: allocate.py  allocate_cpsat.py  report.py  schedule.py  schemas.py  store.py  whatif.py
gateway/src/memaix_gateway/rules/: actions.py  engine.py  match.py  store.py
gateway/src/memaix_gateway/safety/: audit.py  idempotency.py  net.py  rate_limit.py
gateway/src/memaix_gateway/search/: embedder.py  index.py  query.py  store.py
gateway/src/memaix_gateway/timeline/: inverse.py  store.py  undo.py
gateway/src/memaix_gateway/tools/: __init__.py  account.py  backlog.py  calendar.py  contacts.py  email.py  files.py  memory.py  nc_docgen.py  nc_files.py  nc_tasks.py  onboarding.py  pm.py  pm_engine.py  whoami.py
gateway/src/memaix_gateway/web/: __init__.py  acl_writer.py  routes.py  totp.py
gateway/src/memaix_gateway/web/api/: __init__.py  accounts.py  admin.py  admin_llm.py  admin_write.py  brief.py  memory.py  mfa.py  outbox.py  search.py  timeline.py
gateway/src/memaix_gateway/web/pages/: admin.html  board.html  home.html  login.html  memory.html  outbox.html  search.html  settings.html  shell.html
gateway/src/memaix_gateway/web/static/: admin.js  app.css  app.js  home.js  memory.js  outbox.js  search.js  settings.js  shell.js
gateway/tests/: test_account.py  test_account_email.py  test_acl_admin.py  test_admin_llm.py  test_audit_query.py  test_auth.py  test_backlog.py  test_board_auth.py  test_board_outbox.py  test_board_timeline.py  test_calendar.py  test_calendar_setup.py  test_capabilities_coverage.py  test_capabilities_registry.py  test_connectors_base.py  test_connectors_catalog.py  test_connectors_registry.py  test_deck_adapter.py  test_deck_sync_server.py  test_discoverability_guide.py  test_docgen.py  test_doctor.py  test_email.py  test_email_server.py  test_gemma_agent.py  test_http_app_scheduler.py  test_idempotency_store.py  test_llm_bridge_agent.py  test_llm_client.py  test_login_auth.py  test_mail_microsoft_adapter.py  test_mail_microsoft_server.py  test_memory.py  test_nc_contacts.py  test_nc_contacts_server.py  test_nc_docgen_server.py  test_nc_files.py  test_nc_files_server.py  test_nc_tasks.py  test_nc_tasks_server.py  (+48 more)
gateway/tests_e2e/: conftest.py  test_web_ui.py
(+22 files in other folders)
