[project]
name = "memaix-gateway"
version = "0.1.0"
description = "Memaix — self-hosted, AI-agnostic assistant gateway (MCP)"
requires-python = ">=3.12"
license = { text = "AGPL-3.0-or-later" }
dependencies = [
    "mcp",
    "httpx",
    "uvicorn>=0.29",
    "pyyaml",
    "imap-tools",
    "caldav",
    "requests",
    "python-dateutil",
    "cryptography>=42",
    "pyjwt>=2.8",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-anyio",
]
# Optional local semantic embedder (FEATURE-SEMANTIC-SEARCH.md). Without it,
# search_all() degrades gracefully to lexical (FTS5) search only.
search = [
    "sentence-transformers>=2.7",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
